@@ -2,6 +2,7 @@
 v4.3.0-git
 ----------
 
+[jan] Keep original file names when PUTing tasks via WebDAV.
 [mjr] Add an "actual" field for tracking actual time spent.
 [mjr] Add support for task organizer and iTip functionality.
 [jan] Fall back to sort by name if sort criteria are equal.
